--- a/public/terra/scss/components/_navbar.scss
+++ b/public/terra/scss/components/_navbar.scss
@@ -14,7 +14,6 @@ body.has-open-nav {
 }
 
 .ter-navbar {
-	@include z-index(9);
 	height: $navbar-height;
 	background: $navbar-bg;
 	transition: transform .5s ease;
